--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
 <head>
-    <title>Download Page</title>
+  <meta charset="UTF-8">
+  <title>Untitled</title>
+  <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-    <a href="certificate_photo.jpg"><button>Download your certificate in photo</button></a>
-    <a href="certificate.pdf"><button>Download your certificate in pdf</button></a>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meta Certificate Download</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="background-design"></div>
+    <div class="container">
+        <div class="logo-container">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7b/Meta_Platforms_Inc._logo.svg" alt="Meta Logo" class="meta-logo">
+        </div>
+        <h1>Meta Certificate Downloads</h1>
+        <div class="button-container">
+            <a href="#" class="download-btn">Download certificate Photo</a>
+            <a href="#" class="download-btn">Download Certificate PDF</a>
+        </div>
+    </div>
+</body>
+</html>
+<!-- partial -->
+  
 </body>
 </html>
