--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
         <h1>Meta Certificate Downloads</h1>
         <div class="button-container">
-            <a href="#" class="download-btn">Download certificate Photo</a>
-            <a href="#" class="download-btn">Download Certificate PDF</a>
+            <a href="Certificate.png" class="download-btn">Download certificate Photo</a>
+            <a href="Certificate.pdf" class="download-btn">Download Certificate PDF</a>
         </div>
     </div>
 </body>
