--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Untitled</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="Style.css">
 
 </head>
 <body>
