--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meta Certificate Download</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div class="background-design"></div>
