--- a/index.html
+++ b/index.html
@@ -1,33 +1,607 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meta Certificate Download</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="meta.png">
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather Mood</title>
+  <!-- Google Material Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Particles.js for Animated Backgrounds -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <style>
+    :root {
+      --bg-gradient: linear-gradient(135deg, #87CEEB, #1E90FF);
+      --card-bg: rgba(255, 255, 255, 0.9);
+      --text-color: #333;
+      --primary-color: #1E90FF;
+      --button-hover: #4169E1;
+      --forecast-bg: rgba(255, 255, 255, 0.8);
+      --vibe-color: #0288d1;
+      --share-bg: #f06292;
+      --share-hover: #ec407a;
+      --upload-bg: #4caf50;
+      --upload-hover: #43a047;
+    }
+
+    [data-theme="dark"] {
+      --bg-gradient: linear-gradient(135deg, #263238, #37474f);
+      --card-bg: rgba(55, 71, 79, 0.9);
+      --text-color: #b0bec5;
+      --primary-color: #4fc3f7;
+      --button-hover: #29b6f6;
+      --forecast-bg: rgba(55, 71, 79, 0.8);
+      --vibe-color: #4fc3f7;
+      --share-bg: #f06292;
+      --share-hover: #ec407a;
+      --upload-bg: #66bb6a;
+      --upload-hover: #4caf50;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      background: var(--bg-gradient);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+      position: relative;
+      overflow-x: hidden;
+      transition: background 0.5s;
+    }
+
+    #particles-js {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(255,255,255,0.3)" d="M0,192L60,186.7C120,181,240,171,360,149.3C480,128,600,96,720,101.3C840,107,960,149,1080,165.3C1200,181,1320,171,1380,165.3L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>') repeat-x bottom;
+      filter: blur(10px);
+      z-index: -1;
+      animation: cloudShift 20s infinite linear;
+    }
+
+    @keyframes cloudShift {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-1440px); }
+    }
+
+    .container {
+      background: var(--card-bg);
+      border-radius: 20px;
+      padding: 20px;
+      width: 100%;
+      max-width: 500px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+      position: relative;
+      z-index: 1;
+    }
+
+    /* Header Section */
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 20px;
+      position: relative;
+    }
+
+    .city-name {
+      font-size: 28px;
+      font-weight: bold;
+      color: var(--primary-color);
+      text-align: center;
+      flex: 1;
+    }
+
+    .add-location, .settings, .theme-toggle {
+      background: var(--primary-color);
+      color: white;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
+
+    .theme-toggle {
+      background: none;
+      color: var(--text-color);
+      position: absolute;
+      top: -50px;
+      right: 0;
+    }
+
+    .add-location:hover, .settings:hover, .theme-toggle:hover {
+      transform: scale(1.1);
+    }
+
+    .dots {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 20px;
+      color: var(--text-color);
+    }
+
+    /* Main Temperature Display */
+    .temp-display {
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    .temperature {
+      font-size: 64px;
+      font-weight: bold;
+      color: var(--text-color);
+      animation: fadeIn 0.5s;
+    }
+
+    .condition {
+      font-size: 20px;
+      color: var(--text-color);
+      margin: 10px 0;
+    }
+
+    .vibe {
+      font-size: 24px;
+      font-weight: bold;
+      color: var(--vibe-color);
+      margin: 10px 0;
+    }
+
+    .timestamp {
+      font-size: 14px;
+      color: #777;
+    }
+
+    .share-button {
+      background: var(--share-bg);
+      margin-top: 10px;
+      padding: 10px 20px;
+      border-radius: 8px;
+    }
+
+    .share-button:hover {
+      background: var(--share-hover);
+    }
+
+    /* Forecast Section */
+    .forecast {
+      margin: 20px 0;
+    }
+
+    .five-day {
+      background: var(--forecast-bg);
+      border-radius: 10px;
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .day {
+      text-align: center;
+      flex: 1;
+    }
+
+    .day.today {
+      font-weight: bold;
+    }
+
+    .day-icon {
+      font-size: 24px;
+      margin-bottom: 5px;
+    }
+
+    .more-details {
+      background: var(--primary-color);
+      color: white;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .details-panel {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s ease-in-out;
+      background: var(--forecast-bg);
+      border-radius: 10px;
+      padding: 0 10px;
+    }
+
+    .details-panel.open {
+      max-height: 200px;
+      padding: 10px;
+    }
+
+    .hourly {
+      margin-top: 20px;
+      overflow-x: auto;
+      white-space: nowrap;
+      padding: 10px 0;
+    }
+
+    .hour {
+      display: inline-block;
+      text-align: center;
+      width: 80px;
+      margin-right: 10px;
+    }
+
+    /* Photo Gallery */
+    .photo-upload {
+      margin: 20px 0;
+    }
+
+    .photo-upload input[type="file"] {
+      display: none;
+    }
+
+    .photo-upload label {
+      display: inline-flex;
+      align-items: center;
+      padding: 12px 20px;
+      background: var(--upload-bg);
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .photo-upload label:hover {
+      background: var(--upload-hover);
+    }
+
+    .photo-gallery {
+      margin-top: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      max-height: 200px;
+      overflow-y: auto;
+    }
+
+    .photo-gallery img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s;
+    }
+
+    .photo-gallery img:hover {
+      transform: scale(1.05);
+    }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+    }
+
+    .modal-content {
+      background: var(--card-bg);
+      padding: 20px;
+      border-radius: 10px;
+      width: 300px;
+      animation: popUp 0.3s;
+    }
+
+    @keyframes popUp {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    button {
+      transition: transform 0.3s;
+    }
+
+    button:active {
+      transform: scale(0.95);
+      position: relative;
+      overflow: hidden;
+    }
+
+    button::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 0;
+      height: 0;
+      background: rgba(255, 255, 255, 0.3);
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
+      animation: ripple 0.6s linear;
+    }
+
+    @keyframes ripple {
+      to { width: 200px; height: 200px; opacity: 0; }
+    }
+  </style>
 </head>
 <body>
-    <div class="background-design"></div>
-    <div class="container">
-        <div class="logo-container">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7b/Meta_Platforms_Inc._logo.svg" alt="Meta Logo" class="meta-logo">
-        </div>
-        <h1>Meta Certificate Downloads</h1>
-        <div class="timestamp">UTC: <span id="currentDateTime"></span></div>
-        <div class="button-container">
-            <button onclick="downloadFile('pdf')" class="download-btn">
-                <span class="btn-text">Download PDF Certificate</span>
-                <span class="file-type">.pdf</span>
-            </button>
-            <button onclick="downloadFile('png')" class="download-btn">
-                <span class="btn-text">Download PNG Certificate</span>
-                <span class="file-type">.png</span>
-            </button>
-        </div>
-        <div id="downloadStatus" class="download-status"></div>
+  <div id="particles-js"></div>
+  <div class="container swipe-container">
+    <button class="theme-toggle" onclick="toggleTheme()">
+      <span class="material-icons" id="theme-icon">light_mode</span>
+    </button>
+
+    <!-- Header Section -->
+    <div class="header">
+      <div class="add-location" onclick="openModal()">
+        <span class="material-icons">add</span>
+      </div>
+      <div class="city-name" id="city-name">Siddipet</div>
+      <div class="settings" onclick="alert('Settings coming soon!')">
+        <span class="material-icons">settings</span>
+      </div>
     </div>
-    <script src="script.js"></script>
+    <div class="dots" id="dots">••••</div>
+
+    <!-- Main Temperature Display -->
+    <div class="temp-display">
+      <div class="temperature" id="temperature">28°C</div>
+      <div class="condition" id="condition">Clear</div>
+      <div class="vibe" id="vibe">Sunny + Warm = Beach Picnic Vibes</div>
+      <div class="timestamp" id="timestamp">As of 4:15 PM</div>
+      <button class="share-button" id="share-button" onclick="shareMood()">
+        <span class="material-icons">share</span> Share
+      </button>
+    </div>
+
+    <!-- Forecast Section -->
+    <div class="forecast">
+      <div class="five-day" id="five-day">
+        <!-- Populated by JS -->
+      </div>
+      <div class="details-panel" id="details-panel">
+        Detailed forecast coming soon!
+      </div>
+      <div class="hourly" id="hourly-forecast">
+        <!-- Populated by JS -->
+      </div>
+    </div>
+
+    <!-- Photo Upload & Gallery -->
+    <div class="photo-upload">
+      <label for="photo-input">
+        <span class="material-icons">upload</span> Share Your Mood
+      </label>
+      <input type="file" id="photo-input" accept="image/*" onchange="addPhoto(event)">
+    </div>
+    <div class="photo-gallery" id="photo-gallery"></div>
+  </div>
+
+  <!-- Modal for Adding Location -->
+  <div class="modal" id="add-location-modal">
+    <div class="modal-content">
+      <h2>Add Location</h2>
+      <input type="text" id="new-location" placeholder="Enter city name">
+      <button onclick="addLocation()">Add</button>
+      <button onclick="closeModal()">Close</button>
+    </div>
+  </div>
+
+  <script>
+    const API_KEY = 'bc08c128fc2cee010f0c332f473edef7';
+    let locations = ['Siddipet'];
+    let currentIndex = 0;
+    let photos = [];
+    let currentWeather = '';
+    let currentVibe = '';
+
+    // Particles.js Initialization
+    function initParticles(condition) {
+      particlesJS('particles-js', {
+        particles: {
+          number: { value: 50, density: { enable: true, value_area: 800 } },
+          color: { value: condition.includes('rain') ? '#2196f3' : condition === 'snow' ? '#ffffff' : '#ffeb3b' },
+          shape: { type: condition === 'snow' ? 'circle' : 'circle' },
+          opacity: { value: 0.5 },
+          size: { value: condition === 'snow' ? 5 : 3, random: true },
+          move: {
+            enable: true,
+            speed: condition.includes('rain') ? 6 : 2,
+            direction: condition.includes('rain') || condition === 'snow' ? 'bottom' : 'none',
+            out_mode: 'out'
+          }
+        },
+        interactivity: { detect_on: 'canvas', events: { onhover: { enable: false } } }
+      });
+    }
+
+    // Dark Mode Toggle
+    function toggleTheme() {
+      const body = document.body;
+      const themeIcon = document.getElementById('theme-icon');
+      const isDark = body.getAttribute('data-theme') === 'dark';
+      body.setAttribute('data-theme', isDark ? 'light' : 'dark');
+      themeIcon.textContent = isDark ? 'light_mode' : 'dark_mode';
+      localStorage.setItem('theme', isDark ? 'light' : 'dark');
+    }
+
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    document.body.setAttribute('data-theme', savedTheme);
+    document.getElementById('theme-icon').textContent = savedTheme === 'dark' ? 'dark_mode' : 'light_mode';
+
+    // Fetch Weather Data
+    async function fetchWeather(location) {
+      try {
+        const response = await fetch(
+          `https://api.openweathermap.org/data/2.5/weather?q=${location}&appid=${API_KEY}&units=metric`
+        );
+        if (!response.ok) throw new Error('Location not found');
+        const data = await response.json();
+        updateUI(data);
+        initParticles(data.weather[0].main.toLowerCase());
+      } catch (error) {
+        document.getElementById('condition').textContent = error.message;
+      }
+    }
+
+    function updateUI(data) {
+      const temp = Math.round(data.main.temp);
+      const condition = data.weather[0].description;
+      const timestamp = new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+      const weatherMain = data.weather[0].main.toLowerCase();
+
+      document.getElementById('city-name').textContent = data.name;
+      document.getElementById('temperature').textContent = `${temp}°C`;
+      document.getElementById('condition').textContent = condition.charAt(0).toUpperCase() + condition.slice(1);
+      document.getElementById('timestamp').textContent = `As of ${timestamp}`;
+
+      // Vibe Generation
+      let vibe = '';
+      if (weatherMain.includes('rain') || weatherMain.includes('drizzle')) {
+        vibe = 'Rainy + Cozy = Perfect Chai Day';
+      } else if (weatherMain === 'clear' && temp > 25) {
+        vibe = 'Sunny + Warm = Beach Picnic Vibes';
+      } else if (weatherMain === 'snow') {
+        vibe = 'Snowy + Magical = Build a Snowman';
+      } else if (temp < 5) {
+        vibe = 'Cold + Crisp = Hot Cocoa Time';
+      } else {
+        vibe = 'Chill + Mild = Casual Stroll Day';
+      }
+      currentWeather = `${data.name}: ${temp}°C, ${condition}`;
+      currentVibe = vibe;
+      document.getElementById('vibe').textContent = vibe;
+
+      // Static Forecast (for now)
+      const fiveDay = document.getElementById('five-day');
+      fiveDay.innerHTML = `
+        <div class="day today"><span class="material-icons day-icon">${weatherMain === 'clear' ? 'wb_sunny' : 'cloud'}</span><div>Today</div><div>${temp}° | ${temp - 5}°</div></div>
+        <div class="day"><span class="material-icons day-icon">cloud</span><div>Wed</div><div>32° | 20°</div></div>
+        <div class="day"><span class="material-icons day-icon">umbrella</span><div>Thu</div><div>30° | 19°</div></div>
+        <div class="day"><span class="material-icons day-icon">thunderstorm</span><div>Fri</div><div>29° | 18°</div></div>
+        <button class="more-details" onclick="toggleDetails()">More Details</button>
+      `;
+
+      const hourly = document.getElementById('hourly-forecast');
+      hourly.innerHTML = Array(5).fill().map((_, i) => `
+        <div class="hour">
+          <span class="material-icons">${i % 2 ? 'wb_sunny' : 'cloud'}</span>
+          <div>${temp - i}°C</div>
+          <div>${(16 + i) % 24}:00</div>
+        </div>
+      `).join('');
+    }
+
+    // Modal Functions
+    function openModal() {
+      document.getElementById('add-location-modal').style.display = 'flex';
+    }
+
+    function closeModal() {
+      document.getElementById('add-location-modal').style.display = 'none';
+    }
+
+    function addLocation() {
+      const newLocation = document.getElementById('new-location').value.trim();
+      if (newLocation) {
+        locations.push(newLocation);
+        currentIndex = locations.length - 1;
+        fetchWeather(newLocation);
+        closeModal();
+        updateDots();
+      }
+    }
+
+    // Forecast Details Toggle
+    function toggleDetails() {
+      const panel = document.getElementById('details-panel');
+      panel.classList.toggle('open');
+    }
+
+    // Swipe to Switch Cities
+    let startX = 0;
+    document.querySelector('.swipe-container').addEventListener('touchstart', (e) => {
+      startX = e.touches[0].clientX;
+    });
+
+    document.querySelector('.swipe-container').addEventListener('touchend', (e) => {
+      const endX = e.changedTouches[0].clientX;
+      if (startX - endX > 50 && currentIndex < locations.length - 1) {
+        currentIndex++;
+        fetchWeather(locations[currentIndex]);
+        updateDots();
+      } else if (endX - startX > 50 && currentIndex > 0) {
+        currentIndex--;
+        fetchWeather(locations[currentIndex]);
+        updateDots();
+      }
+    });
+
+    function updateDots() {
+      const dots = '•'.repeat(locations.length);
+      document.getElementById('dots').textContent = dots;
+    }
+
+    // Photo Functions
+    function addPhoto(event) {
+      const file = event.target.files[0];
+      const gallery = document.getElementById('photo-gallery');
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+          photos.push(e.target.result);
+          gallery.innerHTML = photos.map(photo => `<img src="${photo}" alt="Mood">`).join('');
+        };
+        reader.readAsDataURL(file);
+      }
+    }
+
+    // Social Sharing
+    function shareMood() {
+      const text = `${currentWeather}\n${currentVibe}\nCheck out my Weather Mood!`;
+      const url = 'https://weather-mood.example.com';
+      if (navigator.share) {
+        navigator.share({ title: 'Weather Mood', text, url }).catch(err => console.error('Share failed:', err));
+      } else {
+        const tweetText = encodeURIComponent(text + '\n' + url);
+        window.open(`https://twitter.com/intent/tweet?text=${tweetText}`, '_blank');
+      }
+    }
+
+    // Initial Load
+    fetchWeather(locations[0]);
+  </script>
 </body>
 </html>
